--- a/TrainTimesTodayMainApp/StationButton.xib
+++ b/TrainTimesTodayMainApp/StationButton.xib
@@ -3,13 +3,11 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11517.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StationButton" customModule="TrainTimesToday">
             <connections>
-                <outlet property="iconView" destination="778-HN-urI" id="XMW-Vw-4mk"/>
                 <outlet property="name" destination="DZD-lG-GMx" id="gID-cL-n9b"/>
             </connections>
         </placeholder>
@@ -18,21 +16,15 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="778-HN-urI" userLabel="departing_Icon"/>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DZD-lG-GMx">
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="778-HN-urI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="AEx-ds-2F8"/>
-                <constraint firstItem="778-HN-urI" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="3:5" id="CNK-i5-Vce"/>
-                <constraint firstItem="778-HN-urI" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="GmW-Hn-DpA"/>
-                <constraint firstAttribute="bottom" secondItem="DZD-lG-GMx" secondAttribute="bottom" constant="5" id="YJ1-TX-ZbR"/>
-                <constraint firstItem="DZD-lG-GMx" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="r4T-4e-9Dm"/>
-                <constraint firstItem="778-HN-urI" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="3:5" id="rNB-ur-yyx"/>
+                <constraint firstItem="DZD-lG-GMx" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="7qV-VK-aje"/>
+                <constraint firstItem="DZD-lG-GMx" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="9fF-cG-Hiy"/>
             </constraints>
             <point key="canvasLocation" x="33.5" y="54.5"/>
         </view>
